examples/test/testpolicy3639.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3639
  namespace: namespace324
spec:
  podSelector:
    matchLabels:
      key41: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value47
          key30: value28
      podSelector:
        matchLabels:
          key45: value23
          key0: value19
